--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,3 +34,6 @@ web-sys = { version = "0.3", optional = true, features = [
 
 [target.'cfg(target_arch = "wasm32")'.dev-dependencies]
 wasm-bindgen-test = "0.3"
+
+[dev-dependencies]
+lexopt = "0.3"
