--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -20,6 +20,10 @@ jobs:
       - uses: actions/checkout@v4
       - name: Build
         run: cargo build --verbose
+      - name: Run clippy
+        run: cargo clippy --verbose
+      - name: Run fmt check
+        run: cargo fmt --check --verbose
       - name: Run tests
         run: cargo test --verbose
 
