--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -17,10 +17,12 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     steps:
-      - name: Set git to use LF
+      - name: Setup Windows
         run: |
           git config --global core.autocrlf false
           git config --global core.eol lf
+          vcpkg install openssl:x64-windows
+          echo "VCPKG_ROOT=C:\vcpkg" >> $env:GITHUB_ENV
         if: matrix.os == 'windows-latest'
       - uses: actions/checkout@v4
       - name: Build
@@ -31,6 +33,13 @@ jobs:
         run: cargo fmt --check --verbose
       - name: Run tests
         run: cargo test --verbose
+
+      - name: Build libiconv
+        run: cargo build --no-default-features --features libiconv --verbose
+      - name: Run clippy for libiconv
+        run: cargo clippy --no-default-features --features libiconv --verbose
+      - name: Run tests for libiconv
+        run: cargo test --no-default-features --features libiconv --verbose
 
   build-wasm:
     runs-on: ubuntu-latest
