--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -24,6 +24,7 @@ jobs:
           vcpkg install openssl:x64-windows
           echo "VCPKG_ROOT=C:\vcpkg" >> $env:GITHUB_ENV
         if: matrix.os == 'windows-latest'
+      
       - uses: actions/checkout@v4
       - name: Build
         run: cargo build --verbose
@@ -34,12 +35,17 @@ jobs:
       - name: Run tests
         run: cargo test --verbose
 
+      - name: Install libiconv on macOS
+        run: brew install libiconv
+        if: matrix.os == 'macos-latest'
       - name: Build libiconv
         run: cargo build --no-default-features --features libiconv --verbose
       - name: Run clippy for libiconv
         run: cargo clippy --no-default-features --features libiconv --verbose
       - name: Run tests for libiconv
         run: cargo test --no-default-features --features libiconv --verbose
+        # Ubuntu does not provide libiconv
+        if: matrix.os != 'ubuntu-latest'
 
   build-wasm:
     runs-on: ubuntu-latest
