--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -23,8 +23,9 @@ jobs:
           git config --global core.eol lf
           vcpkg install openssl:x64-windows
           echo "VCPKG_ROOT=C:\vcpkg" >> $env:GITHUB_ENV
+          echo "VCPKGRS_DYNAMIC=1" >> $env:GITHUB_ENV
         if: matrix.os == 'windows-latest'
-      
+
       - uses: actions/checkout@v4
       - name: Build
         run: cargo build --verbose
@@ -42,10 +43,15 @@ jobs:
         run: cargo build --no-default-features --features libiconv --verbose
       - name: Run clippy for libiconv
         run: cargo clippy --no-default-features --features libiconv --verbose
-      - name: Run tests for libiconv
+      # Ubuntu does not provide libiconv
+      - name: Run tests for libiconv Windows
         run: cargo test --no-default-features --features libiconv --verbose
-        # Ubuntu does not provide libiconv
-        if: matrix.os != 'ubuntu-latest'
+        if: matrix.os == 'windows-latest'
+      - name: Run tests for libiconv macOS
+        run: |
+          export LIBRARY_PATH=$LIBRARY_PATH:$(brew --prefix)/lib:$(brew --prefix libiconv)/lib
+          cargo test --no-default-features --features libiconv --verbose
+        if: matrix.os == 'macos-latest'
 
   build-wasm:
     runs-on: ubuntu-latest
